[gd_scene load_steps=13 format=3 uid="uid://d1hutag10iuil"]

[ext_resource type="PackedScene" uid="uid://d0f3jr3qi0326" path="res://Scenes/Player.tscn" id="1_g76ba"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_y6714"]
[ext_resource type="Script" path="res://Scripts/spawnTimer.gd" id="4_dy3oq"]
[ext_resource type="FontFile" uid="uid://b3jknn0fmfu2o" path="res://Assets/Retro Gaming.ttf" id="5_rmguh"]
[ext_resource type="Script" path="res://Scripts/healthText.gd" id="6_talkc"]
[ext_resource type="Script" path="res://Scripts/scoreText.gd" id="7_4n35e"]
[ext_resource type="Script" path="res://Scripts/parallaxBackground.gd" id="8_7ncvv"]
[ext_resource type="Texture2D" uid="uid://clqj0kv7ymql4" path="res://Assets/kenney_pixel-shmup/Tiles/tile_0042.png" id="8_uq7dn"]
[ext_resource type="Texture2D" uid="uid://bibqkxnn3tvtj" path="res://Assets/kenney_pixel-shmup/Tilemap/tiles_packed.png" id="9_ln1um"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="11_rmw4u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fwdto"]
texture = ExtResource("9_ln1um")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0

[sub_resource type="TileSet" id="TileSet_ftpcw"]
sources/0 = SubResource("TileSetAtlasSource_fwdto")

[node name="Main" type="Node"]
script = ExtResource("1_y6714")
metadata/_edit_vertical_guides_ = [375.0, 375.0]

[node name="Player" parent="." instance=ExtResource("1_g76ba")]
position = Vector2(376, 881)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource("4_dy3oq")

[node name="BossTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="UI" type="Node" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DPHealth" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 13.0
offset_top = 2.0
offset_right = 114.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.992157, 0.803922, 0.156863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_rmguh")
theme_override_font_sizes/font_size = 25
text = "Health"

[node name="HealthText" type="Label" parent="UI/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 14.0
offset_top = 27.0
offset_right = 218.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0.780392, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("5_rmguh")
theme_override_font_sizes/font_size = 30
text = "3"
script = ExtResource("6_talkc")

[node name="DPScore" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 659.0
offset_top = 1.0
offset_right = 752.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.992157, 0.803922, 0.156863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_rmguh")
theme_override_font_sizes/font_size = 25
text = "Score"

[node name="ScoreText" type="Label" parent="UI/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 551.0
offset_top = 27.0
offset_right = 755.0
offset_bottom = 66.0
theme_override_colors/font_shadow_color = Color(0, 0, 1, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("5_rmguh")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2
script = ExtResource("7_4n35e")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("8_7ncvv")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -978)
motion_mirroring = Vector2(0, 1000)

[node name="SpriteWater" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(387, 513)
scale = Vector2(49.375, 65.125)
texture = ExtResource("8_uq7dn")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -984)
motion_mirroring = Vector2(0, 1000)

[node name="TileMap" type="TileMap" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_ftpcw")
format = 2
layer_0/tile_data = PackedInt32Array(2031616, 131072, 5, 1966080, 131072, 4, 1900544, 131072, 4, 1900545, 131072, 4, 1900546, 131072, 4, 1900547, 131072, 4, 1900548, 131072, 4, 1900549, 131072, 4, 1900550, 131072, 4, 1900551, 131072, 4, 1900552, 131072, 4, 1900553, 131072, 4, 1900554, 131072, 4, 1900555, 131072, 4, 1900556, 131072, 4, 1900557, 131072, 4, 1900558, 131072, 4, 1900559, 131072, 4, 1900560, 131072, 4, 1900561, 131072, 4, 1900562, 131072, 4, 1900563, 131072, 4, 1900564, 131072, 4, 1900565, 131072, 4, 1900566, 131072, 4, 1900567, 131072, 4, 1966103, 131072, 4, 2031639, 131072, 5, 2031638, 131072, 5, 2031637, 131072, 5, 2031636, 131072, 5, 2031635, 131072, 5, 2031634, 131072, 5, 2031633, 131072, 5, 2031632, 131072, 5, 1966095, 131072, 4, 1966094, 131072, 4, 1966093, 131072, 4, 1966092, 131072, 4, 1966091, 131072, 4, 1966090, 131072, 4, 1966089, 131072, 4, 1966088, 131072, 4, 1966087, 131072, 4, 1966086, 131072, 4, 1966085, 131072, 4, 1966084, 131072, 4, 1966083, 131072, 4, 1966082, 131072, 4, 1966081, 131072, 4, 2031617, 131072, 5, 2031618, 131072, 5, 2031619, 131072, 5, 2031620, 131072, 5, 2031621, 131072, 5, 2031622, 131072, 5, 2031623, 131072, 5, 2031624, 131072, 5, 2031625, 131072, 5, 2031626, 131072, 5, 2031627, 131072, 5, 2031628, 131072, 5, 2031629, 131072, 5, 2031630, 131072, 5, 2031631, 131072, 5, 1966096, 131072, 4, 1966097, 131072, 4, 1966098, 131072, 4, 1966099, 131072, 4, 1966100, 131072, 4, 1966101, 131072, 4, 1966102, 131072, 4, 1835008, 131072, 3, 1835009, 131072, 3, 1835010, 131072, 3, 1835011, 131072, 3, 1835012, 131072, 3, 1835013, 131072, 3, 1835014, 131072, 3, 1835015, 131072, 3, 1835016, 131072, 3, 1835017, 131072, 3, 1835018, 131072, 3, 1835020, 131072, 3, 1835021, 131072, 3, 1835022, 131072, 3, 1835023, 131072, 3, 1835024, 131072, 3, 1835025, 131072, 3, 1835026, 131072, 3, 1835027, 131072, 3, 1835028, 131072, 3, 1835029, 131072, 3, 1835030, 131072, 3, 1835031, 131072, 3, 1835019, 131072, 3, 720896, 524288, 4, 720897, 524288, 4, 720898, 524288, 4, 786434, 524288, 4, 786435, 524288, 4, 851971, 524288, 4, 851972, 524288, 4, 917508, 524288, 4, 983045, 524288, 4, 1048581, 524288, 4, 1048582, 524288, 4, 1114118, 524288, 4, 1114117, 524288, 4, 1114116, 524288, 4, 1114115, 524288, 4, 1179651, 524288, 4, 1179650, 524288, 4, 1179649, 524288, 4, 1179648, 524288, 4, 1245184, 524288, 5, 1245185, 524288, 5, 1245186, 524288, 5, 1245187, 524288, 5, 1179654, 524288, 5, 1179653, 524288, 5, 1245188, 589824, 5, 1179652, 655360, 3, 1048583, 589824, 4, 1114119, 589824, 4, 983047, 589824, 3, 917510, 589824, 3, 786437, 589824, 3, 720900, 589824, 3, 655363, 589824, 3, 983046, 655360, 4, 786436, 655360, 4, 720899, 655360, 4, 917509, 655360, 4, 851973, 589824, 4, 655362, 524288, 3, 655361, 524288, 3, 655360, 524288, 3, 786432, 524288, 4, 851968, 524288, 4, 917504, 524288, 4, 983040, 524288, 4, 1048576, 524288, 4, 1114112, 524288, 4, 1114113, 524288, 4, 1048577, 524288, 4, 983041, 524288, 4, 917505, 524288, 4, 851969, 524288, 4, 786433, 524288, 4, 851970, 524288, 4, 917506, 524288, 4, 983042, 524288, 4, 1048578, 524288, 4, 1114114, 524288, 4, 1048579, 524288, 4, 983043, 524288, 4, 917507, 524288, 4, 983044, 524288, 4, 1048580, 524288, 4, 196631, 524288, 3, 196629, 524288, 3, 196630, 524288, 3, 196628, 524288, 3, 196627, 524288, 3, 196626, 458752, 3, 589839, 524288, 4, 262162, 458752, 4, 327697, 458752, 3, 393233, 524288, 4, 458768, 524288, 4, 524304, 524288, 4, 524303, 720896, 4, 458767, 458752, 3, 393232, 458752, 3, 589840, 524288, 4, 655376, 524288, 4, 655377, 524288, 4, 720913, 524288, 4, 720914, 524288, 4, 786450, 524288, 4, 786451, 524288, 4, 851987, 524288, 4, 917524, 524288, 4, 917525, 524288, 4, 983061, 524288, 4, 983062, 524288, 4, 983063, 524288, 4, 917527, 524288, 4, 851991, 524288, 4, 786455, 524288, 4, 720919, 524288, 4, 655383, 524288, 4, 589847, 524288, 4, 524311, 524288, 4, 458775, 524288, 4, 393239, 524288, 4, 327703, 524288, 4, 262167, 524288, 4, 262166, 524288, 4, 262165, 524288, 4, 262164, 524288, 4, 262163, 524288, 4, 327699, 524288, 4, 327698, 720896, 4, 393234, 524288, 4, 458770, 524288, 4, 458769, 524288, 4, 524305, 524288, 4, 589841, 524288, 4, 589842, 524288, 4, 524306, 524288, 4, 524307, 524288, 4, 458771, 524288, 4, 393235, 524288, 4, 393236, 524288, 4, 327700, 524288, 4, 327701, 524288, 4, 393237, 524288, 4, 458773, 524288, 4, 458772, 524288, 4, 524308, 524288, 4, 589844, 524288, 4, 589843, 524288, 4, 655379, 524288, 4, 655378, 524288, 4, 720915, 524288, 4, 720916, 524288, 4, 655380, 524288, 4, 655381, 524288, 4, 589845, 524288, 4, 524309, 524288, 4, 524310, 524288, 4, 458774, 524288, 4, 393238, 524288, 4, 327702, 524288, 4, 589846, 524288, 4, 655382, 524288, 4, 720918, 524288, 4, 720917, 524288, 4, 786453, 524288, 4, 786452, 524288, 4, 851988, 524288, 4, 851989, 524288, 4, 851990, 524288, 4, 786454, 524288, 4, 917526, 524288, 4, 1048597, 524288, 5, 1048598, 524288, 5, 1048599, 524288, 5, 983059, 458752, 5, 851985, 458752, 5, 917522, 458752, 5, 786448, 458752, 5, 720911, 458752, 5, 655374, 458752, 5, 524302, 458752, 3, 589838, 458752, 4, 1048596, 458752, 5, 655375, 720896, 3, 720912, 720896, 3, 983060, 720896, 3, 786449, 720896, 3, 851986, 720896, 3, 917523, 720896, 3, 1376268, 458752, 3, 1507338, 458752, 3, 1441803, 458752, 3, 1376269, 589824, 3, 1441805, 524288, 4, 1441806, 589824, 3, 1507342, 589824, 4, 1507341, 524288, 4, 1572877, 655360, 3, 1572876, 524288, 4, 1507340, 524288, 4, 1507339, 524288, 4, 1441804, 524288, 4, 1572875, 720896, 3, 1638412, 524288, 5, 1572874, 458752, 5, 1638411, 458752, 5, 1638413, 589824, 5, 1572878, 589824, 5)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(384, 512)
script = ExtResource("11_rmw4u")

[node name="ShakeTime" type="Timer" parent="Camera"]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_boss_timer_timeout"]
[connection signal="timeout" from="Camera/ShakeTime" to="Camera" method="_on_shake_time_timeout"]
